hack/gke.yaml
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: testapp
  namespace: default
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: istio-system
    - namespaceSelector:
        matchLabels:
          name: nais
  podSelector:
    matchLabels:
      app: testapp
  policyTypes:
  - Ingress
---
